--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ superior quality.
 Underpinned by our 24/7 helpdesk which works in harmony with
 our reactive maintenance, planned maintenance and building
 services solutions, the whole process from start to finish is as
-streamlined and efficient as possible.
+streamlined and efficient as possible. <br> <br>
 ClearView Aluminium and Construction is to serve the needs of construction businesses and home improvement professionals - and, of course,
  amateur enthusiasts. Since then,our client base has grown to include large multinational corporations, 
  rural farmers, and everything in between. If you would like to find out more about how Bright Glass and 
